1. on comment reply updating observation time. 2. wrapping text in checklist header after replacing "_" with spaces. 3. styling on checklist table header. 4. map related fix by Rahul 	1. zoom bar not showing 	2. close button is not coming on pop up.

--- a/web-app/css/wgp.css
+++ b/web-app/css/wgp.css
@@ -1711,3 +1711,7 @@ li#userOrEmail-new {
 .s2ui_hidden_button {
 	display:none;
 }
+.map_wrapper img {
+	max-width:none;
+}
+
